@@ -5,7 +5,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Page_Login.py,v 1.7 2004/11/18 16:40:13 port001 Exp $
+# $Id: Page_Login.py,v 1.8 2004/12/18 22:05:18 port001 Exp $
 #
 
 import os
@@ -19,7 +19,6 @@ class Page_Login(SiteModule):
 
     def __init__(self, **args):
 
-        self.pages = ["login", "perform_login", "logout"]
         self.form = args["form"]       
         self.page = self.form.getvalue("page")
         
