@@ -3,7 +3,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Page_Main.py,v 1.4 2004/11/04 00:59:22 port001 Exp $
+# $Id: Page_Main.py,v 1.5 2004/12/18 22:05:18 port001 Exp $
 #
 
 import Config
@@ -15,7 +15,6 @@ class Page_Main(SiteModule):
 
     def __init__(self, **args):
 
-        self.pages = [None, "main"]
         self.template = Config.Template["main"]
 
     def _set_params(self):
