@@ -3,7 +3,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Page_Search.py,v 1.4 2004/11/04 00:59:22 port001 Exp $
+# $Id: Page_Search.py,v 1.5 2004/12/18 22:05:18 port001 Exp $
 #
 
 import Config
@@ -20,7 +20,6 @@ class Page_Search(SiteModule):
 
     def __init__(self, **args):
 
-        self.pages = ["script_search"]
         self.template = Config.Template["script_search"]
         self.form = args["form"]
 
